# notepad

./: .env.example  .gitignore  README.md  db.sqlite3  git-filter-repo  pyproject.toml  requirements.txt
notepad/: settings.py  urls.py
notepad_app/: admin.py  apps.py  forms.py  models.py  views.py
notepad_app/migrations/: 0001_initial.py  0002_note_user_todolist_user.py  0002_remove_todo_completed_todo_name_task.py  0003_alter_note_user_alter_todolist_user.py  0003_remove_group_group_members_remove_task_todo_and_more.py  0004_team_teammember_team_members_team_owner.py  0005_note_team_todolist_team.py
python3.11/: pyvenv.cfg
static/css/: styles.css
templates/: base.html  category_create.html  category_detail.html  category_form.html  category_list.html  create_todo_item.html  create_todo_list.html  delete_todo_item.html  delete_todo_list.html  group_detail.html  groups.html  login.html  logout.html  note_create.html  note_detail.html  note_form.html  note_list.html  notes_by_category.html  register.html  team_create.html  team_detail.html  team_form.html  team_join_form.html  team_list.html  todo_form.html  todo_list.html  todo_list_detail.html  todo_lists.html  update_todo_item.html  update_todo_list.html
