[tool.poetry]
name = "notepad"
version = "0.1.0"
description = ""
authors = ["reneczka <46569696+reneczka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
CacheControl = "^0.12.14"
gunicorn = "^20.1.0"
django-guardian = "^2.4.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
